Update .gitignore to include environment and documentation files; modify source.config.ts to set docs directory; enhance layout.config.tsx with new SVG logo and accessibility improvements; remove outdated docs/index.mdx and docs/test.mdx files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
 # deps
 /node_modules
 
+# env
+.env
+
+# claude
+.claude.md
+.claude/
+
+# cursor
+.cursor.md
+.cursor/
+.cursorrules.md
+.cursorrules/
+
 # generated content
 .contentlayer
 .content-collections
