Improve docs formatting and add repo standards
Adds documentation formatting and repository standards rules in .cursor/rules. Updates code block formatting in MDX files for clarity and consistency. Updates .gitignore to allow .cursor/ files. Adds fumadocs-docgen dependency and configures MDX plugins in source.config.ts for better code block handling.

--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,10 @@
 .claude/
 
 # cursor
-.cursor.md
-.cursor/
-.cursorrules.md
-.cursorrules/
+#.cursor.md
+#.cursor/
+#.cursorrules.md
+#.cursorrules/
 
 # generated content
 .contentlayer
