--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^19.1.0",
     "fumadocs-ui": "15.6.1",
     "fumadocs-core": "15.6.1",
-    "fumadocs-mdx": "11.6.10"
+    "fumadocs-mdx": "11.6.10",
+    "fumadocs-docgen": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "24.0.7",
