--- a/package.json
+++ b/package.json
@@ -14,32 +14,34 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "fumadocs-core": "15.6.1",
+    "fumadocs-docgen": "^2.0.0",
+    "fumadocs-mdx": "11.6.10",
+    "fumadocs-ui": "15.6.1",
+    "geist": "^1.4.2",
     "next": "15.3.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "fumadocs-ui": "15.6.1",
-    "fumadocs-core": "15.6.1",
-    "fumadocs-mdx": "11.6.10",
-    "fumadocs-docgen": "^2.0.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/mdx": "^2.0.13",
     "@types/node": "24.0.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "typescript": "^5.8.3",
-    "@types/mdx": "^2.0.13",
-    "@tailwindcss/postcss": "^4.1.11",
-    "tailwindcss": "^4.1.11",
-    "postcss": "^8.5.6",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.3.4",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-only-warn": "^1.1.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.10",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "remark-cli": "^12.0.1",
     "remark-lint": "^10.0.1",
-    "remark-lint-heading-style": "^4.0.1"
+    "remark-lint-heading-style": "^4.0.1",
+    "tailwindcss": "^4.1.11",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.8.3"
   }
 }
