--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fumadocs-openapi": "^9.1.1",
     "fumadocs-ui": "15.6.1",
     "geist": "^1.4.2",
+    "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
