--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "fumadocs-ui": "15.6.1",
     "geist": "^1.4.2",
     "lucide-react": "^0.525.0",
+    "mermaid": "^11.8.1",
     "next": "15.3.4",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
